# JIM-CBVR

./: README.md
Android-Client/: gradle.properties  log.txt  settings.gradle  settings.gradle.kts
Android-Client/app/: build.gradle
Android-Client/app/src/main/java/com/jimcbvr/client/: MainActivity.java  NetworkManager.java
Android-Client/gradle/: libs.versions.toml
Android-Client/gradle/wrapper/: gradle-wrapper.properties
Android-Client/mobile/: build.gradle.kts
Android-Client/mobile/src/androidTest/java/com/jimcbvr/client/: ExampleInstrumentedTest.kt
Android-Client/mobile/src/main/: AndroidManifest.xml
Android-Client/mobile/src/main/cpp/: CMakeLists.txt  jimcbvr-native.cpp
Android-Client/mobile/src/main/java/com/jimcbvr/client/: MainActivity.java  NetworkManager.java
Android-Client/mobile/src/main/res/values/: strings.xml  themes.xml
Android-Client/mobile/src/main/res/values-night/: themes.xml
Android-Client/mobile/src/test/java/com/jimcbvr/client/: ExampleUnitTest.kt
Android-Client/wear/: build.gradle.kts
Android-Client/wear/src/main/java/com/jimcbvr/client/complication/: MainComplicationService.kt
Android-Client/wear/src/main/java/com/jimcbvr/client/presentation/: MainActivity.kt
Android-Client/wear/src/main/java/com/jimcbvr/client/tile/: MainTileService.kt
Android-Client/wear/src/main/res/values/: strings.xml
Windows-Server/: AppConfig.cs  FrameProcessor.cs  JIMCBVR.Server.csproj  MainWindow.xaml  MainWindow.xaml.cs  NetworkServiceManager.cs  SteamVRConnector.cs  VideoEncoder.cs
(+1 files in other folders)
